base/argo-cd/base/redis/argocd-redis-service.yaml
apiVersion: v1
kind: Service
metadata: # kpt-merge: /argocd-redis
  labels:
    app.kubernetes.io/name: argocd-redis
    app.kubernetes.io/part-of: argocd
    app.kubernetes.io/component: redis
  name: argocd-redis
  annotations:
    internal.kpt.dev/upstream-identifier: '|Service|default|argocd-redis'
spec:
  ports:
    - name: tcp-redis
      port: 6379
      targetPort: 6379
  selector:
    app.kubernetes.io/name: argocd-redis
