base/argo-cd/base/redis/argocd-redis-network-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata: # kpt-merge: /argocd-redis-network-policy
  name: argocd-redis-network-policy
  annotations:
    internal.kpt.dev/upstream-identifier: 'networking.k8s.io|NetworkPolicy|default|argocd-redis-network-policy'
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: argocd-redis
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: argocd-server
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: argocd-repo-server
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: argocd-application-controller
    ports:
    - protocol: TCP
      port: 6379
